@@ -2117,6 +2117,7 @@ AC_OUTPUT(
   locale/Makefile
   modules/Makefile
   src/Makefile
+  src/prxs
   src/ftpdctl.8
   src/proftpd.8
   src/xferlog.5
