@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.931 2008-08-24 00:30:59 castaglia Exp $
+$Id: NEWS,v 1.932 2008-08-25 22:19:40 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -48,6 +48,8 @@ CVS
   one of the timing of the logging of the "Login successful" message.  Now
   it happens as part of a LOG_CMD handler for the PASS command.
 - Bug 3104 - Syslog logging does not work on Mac OS X.
+- Bug 2991 - Need a `prxs' (ProFTPD Extensions) command-line tool for building
+  shared modules without proftpd source.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
